computed style for transition longhand properties is wrong https://bugs.webkit.org/show_bug.cgi?id=234880

Reviewed by Antti Koivisto.

LayoutTests/imported/w3c:

Mark WPT progressions.

* web-platform-tests/css/css-transitions/parsing/transition-delay-computed-expected.txt:
* web-platform-tests/css/css-transitions/parsing/transition-duration-computed-expected.txt:
* web-platform-tests/css/css-transitions/parsing/transition-property-computed-expected.txt:
* web-platform-tests/css/css-transitions/parsing/transition-timing-function-computed-expected.txt:
* web-platform-tests/css/css-transitions/transition-delay-001-expected.txt:
* web-platform-tests/css/css-transitions/transition-duration-001-expected.txt:

Source/WebCore:

We had two issues in the way we treated animation lists.

First, we would always output the filled-in values in the computed style, which
meant that setting `animation-name: one, two; animation-duration: 1s` would yield
`1s, 1s` instead of just `1s` for animation-duration. So we now maintain a bit
on Animation to indicate whether a given value was set for filling and
ComputedStyleExtractor::addValueForAnimationPropertyToList() can now query it
before adding this value when returning the computed style.

Second, in RenderStyle::adjustTransitions(), we would mistakenly try to remove entries
if we found a transition-property repeated. However, this is valid so we remove the
code related to this entirely.

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::ComputedStyleExtractor::addValueForAnimationPropertyToList):
* platform/animation/Animation.cpp:
(WebCore::Animation::Animation):
* platform/animation/Animation.h:
(WebCore::Animation::clearDelay):
(WebCore::Animation::clearDirection):
(WebCore::Animation::clearDuration):
(WebCore::Animation::clearFillMode):
(WebCore::Animation::clearIterationCount):
(WebCore::Animation::clearPlayState):
(WebCore::Animation::clearProperty):
(WebCore::Animation::clearTimingFunction):
(WebCore::Animation::fillDelay):
(WebCore::Animation::fillDirection):
(WebCore::Animation::fillDuration):
(WebCore::Animation::fillFillMode):
(WebCore::Animation::fillIterationCount):
(WebCore::Animation::fillPlayState):
(WebCore::Animation::fillProperty):
(WebCore::Animation::fillTimingFunction):
(WebCore::Animation::isDelayFilled const):
(WebCore::Animation::isDirectionFilled const):
(WebCore::Animation::isDurationFilled const):
(WebCore::Animation::isFillModeFilled const):
(WebCore::Animation::isIterationCountFilled const):
(WebCore::Animation::isPlayStateFilled const):
(WebCore::Animation::isPropertyFilled const):
(WebCore::Animation::isTimingFunctionFilled const):
* platform/animation/AnimationList.cpp:
(WebCore::AnimationList::fillUnsetProperties):
* rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::adjustTransitions):

LayoutTests:

This test was incorrect since it assumed that filled-in values in animation lists
would be part of the computed style. We update the expectation and add other properties
that weren't being tested.

* animations/fill-unset-properties-expected.txt:
* animations/fill-unset-properties.html:


Canonical link: https://commits.webkit.org/245775@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287678 268f45cc-cd09-0410-ab3c-d52691b4dbfc